# nook

./: Cargo.toml  LICENSE  README.md  build.json  build.rs  build.zig  build.zig.zon  notes.md
docs/: roadmap.md
docs/base/: 0-conventions.md  1-data-types.md  2-expressions.md  3-variables.md  4-functions.md  5-flow-control.md  6-heap-alloc.md  7-structs.md
docs/design/: 1-data-types.md  2-expressions.md  3-variables.md  4-functions.md  6-heap-alloc.md  7-structs.md
example/: main.nk  nook.manifest
src/: main.rs  main.zig
src/ast/: expr.rs  lexer.rs  mod.rs  parser.rs  print.rs  stmt.rs  token.rs  value.rs
src/cli/: arg.zig  build_cmd.zig  cmd.zig  cmd_build.zig  cmd_debug.zig  cmd_init.zig  cmd_version.zig  data_type.zig  debug_cmd.zig  help_cmd.zig  init_cmd.zig  option.zig  root.zig
src/compiler/: mod.rs
src/log/: log.zig  root.zig
src/manifest/: mod.rs
src/util/: log.rs
