[package]
name = "nook"
version = "1.0.0"
authors = ["Chris Beimers <chrisbeimers113@gmail.com>"]
description = "An experimental systems language project focusing on simplicity, explicitness, and safety."
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.27.2"
toml = "1.0.2"

[build-dependencies]
serde_json = "1.0"
